--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700;800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap');
 $font__public: 'Public Sans',
 sans-serif;
-
-* {
-    font-family: $font__public;
-}
+$font__title:'Fira Sans',
+sans-serif;
