--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -4,3 +4,26 @@ $font__public: 'Public Sans',
 sans-serif;
 $font__title:'Fira Sans',
 sans-serif;
+
+h1 {
+    font-family: $font__title;
+    font-size: 52px;
+    font-weight: 500;
+}
+
+h2 {
+    font-family: $font__title;
+    font-size: 40px;
+    font-weight: 500;
+}
+
+h3 {
+    font-family: $font__title;
+    font-weight: 500;
+    font-size: 25px;
+}
+
+p {
+    font-family: $font__public;
+    line-height: 30px;
+}
