--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -23,6 +23,12 @@ h3 {
     font-size: 25px;
 }
 
+h4 {
+    font-family: $font__title;
+    font-weight: 500;
+    font-size: 18px;
+}
+
 p {
     font-family: $font__public;
     line-height: 30px;
