--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -51,6 +51,8 @@ p {
 
     .separator-text {
         margin-left: 70px !important;
+        font-size: 12px !important;
+        font-weight: 500 !important;
     }
 }
 
