--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -46,13 +46,14 @@ p {
         border-radius: 10px;
         position: absolute;
         left: 0;
-        background-color: #8d99ae
+        background-color: #8d99ae;
     }
 
     .separator-text {
         margin-left: 70px !important;
         font-size: 12px !important;
         font-weight: 500 !important;
+        color: #8d99ae;
     }
 }
 
