--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap');
 $font__menu: 'Public Sans',
 sans-serif;
-$font__public: 'Fira Sans',
+$font__public: 'Georgia',
 sans-serif;
 $font__title:'Georgia',
 serif;
